--- a/sections/05/login.html
+++ b/sections/05/login.html
@@ -1,37 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>DataInisght Login</title>
-    <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-</head>
+    <script
+      type="text/javascript"
+      src="https://identity.netlify.com/v1/netlify-identity-widget.js"
+    ></script>
+  </head>
 
-<body>
+  <body>
     <div>
-        <h1>Woops, looks like there's nothing here for you. But maybe there could be?</h1>
-        <button>Login/Signup</button>
+      <h1>
+        Woops, looks like there's nothing here for you. But maybe there could
+        be?
+      </h1>
+      <button>Login/Signup</button>
     </div>
     <script>
-        const btn = document.querySelector('button');
-        btn.addEventListener('click', () => netlifyIdentity.open());
-        const refreshUser = () => {
-            if (localStorage.getItem('gotrue.user')) {
-                netlifyIdentity.gotrue.currentUser().jwt()
-                    .then(jwt => console.log(token))
-                    .catch(err => {
-                        console.log(err);
-                        netlifyIdentity.open();
-                    })
-            } else {
-                netlifyIdentity.open();
-            }
-
+      const btn = document.querySelector('button');
+      btn.addEventListener('click', () => netlifyIdentity.open());
+      const refreshUser = () => {
+        if (localStorage.getItem('gotrue.user')) {
+          netlifyIdentity.gotrue
+            .currentUser()
+            .jwt()
+            .then(jwt => console.log(jwt))
+            .catch(err => {
+              console.log(err);
+              netlifyIdentity.open();
+            });
+        } else {
+          netlifyIdentity.open();
         }
-        setTimeout(refreshUser, 1000)
+      };
+      setTimeout(refreshUser, 1000);
     </script>
-</body>
-
+  </body>
 </html>
